--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@splinetool/react-spline": "^2.2.1",
+    "@splinetool/runtime": "^0.9.325",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "@splinetool/react-spline": "^2.2.1",
-    "@splinetool/runtime": "^0.9.325",
-    "react-bootstrap": "^2.7.4"
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
