--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
+    "@esbuild/linux-x64": "^0.17.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
