--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@splinetool/runtime": "^0.9.325",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
