--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@splinetool/react-spline": "^2.2.1",
     "@splinetool/runtime": "^0.9.325",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.53.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "mdb-react-ui-kit": "^6.0.0",
