--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "react-select": "^5.7.3",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.1.2",
     "redux-devtools-extension": "^2.13.9"
   },
